[gd_scene load_steps=2 format=3 uid="uid://skos2x0bvjxb"]

[ext_resource type="Script" uid="uid://c5oqhm5eqcldk" path="res://select_user.gd" id="1_4q8q0"]

[node name="selectUser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4q8q0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -101.0
offset_right = 149.5
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enviar un mensaje privado"

[node name="enviar" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ENVIAR"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/enviar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.174
anchor_top = 0.956
anchor_right = 0.174
anchor_bottom = 0.956
offset_left = -179.448
offset_top = -9.48804
offset_right = 179.552
offset_bottom = 9.51196

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer/enviar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enviar un mensaje"

[node name="enviar" type="Button" parent="Panel/VBoxContainer/HBoxContainer/enviar/HBoxContainer"]
layout_mode = 2
text = "ENVIAR"

[node name="invite" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "INVITAR A MATCH"

[node name="cancelar" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CANCELAR"

[connection signal="text_submitted" from="Panel/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_input_submitted"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/enviar" to="." method="_on_send_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/invite" to="." method="_on_invite_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/cancelar" to="." method="_on_cancelar_pressed"]
